generate text from bert tokens

--- a/TweetText.ipynb
+++ b/TweetText.ipynb
@@ -26,9 +26,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens.csv')\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)\n",
-    "model = BertModel.from_pretrained('/dev/bert/')"
+    "column_of_interest = [\"text_ tokens\"]\n",
+    "train_set = pd.read_csv('s3://recsys-challenge-2020/train_set.csv', encoding=\"utf-8\",\n",
+    "                     usecols= [1])\n",
+    "val_set = pd.read_csv('s3://recsys-challenge-2020/val_set.csv', encoding=\"utf-8\",\n",
+    "                     usecols= [1])\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set.head()"
    ]
   },
   {
@@ -38,12 +50,8 @@
    "outputs": [],
    "source": [
     "def calculate_text(row):\n",
-    "    tweet_token_list = ast.literal_eval(row)\n",
-    "    sum_text = ''\n",
-    "    for token_list in tweet_token_list:\n",
-    "        token_list_text = tokenizer.decode(list(map(int, token_list.split('\\t'))))\n",
-    "        sum_text = sum_text + token_list_text+ ' '\n",
-    "    return sum_text"
+    "    tweet_tokens = tokenizer.decode(list(map(int, row.split('\\t'))))\n",
+    "    return tweet_tokens"
    ]
   },
   {
@@ -52,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens['user_text'] = user_tokens['text_ tokens'].apply(lambda x: calculate_text(x))"
+    "train_set['user_text'] = train_set['text_ tokens'].apply(lambda x: calculate_text(x))"
    ]
   },
   {
@@ -61,7 +69,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens.to_csv('s3://recsys-challenge-2020/user_tokens_text.csv', index = False)"
+    "val_set['user_text'] = val_set['text_ tokens'].apply(lambda x: calculate_text(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set.to_csv('s3://recsys-challenge-2020/train_set_text.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set.to_csv('s3://recsys-challenge-2020/val_set_text.csv', index = False)"
    ]
   }
  ],
