--- a/UserEmbeddings.ipynb
+++ b/UserEmbeddings.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "#user_tokens = pd.read_csv('s3://recsys_challenge_2020/user_tokens.csv')\n",
+    "user_tokens = pd.read_csv('s3://recsys_challenge_2020/user_tokens.csv')\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)\n",
     "model = BertModel.from_pretrained('/dev/bert/', configuration)"
    ]
