--- a/LanguageDistribution.ipynb
+++ b/LanguageDistribution.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,135 @@
     "# pr = [0.5] * len(gt)\n",
     "# prauc = metrics.compute_prauc(pr,gt)\n",
     "# rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "D3164C7FBCF2565DDF915B1B3AEFB1DC    60722973\n",
+       "22C448FF81263D4BAF2A176145EE9EAD    23652265\n",
+       "06D61DCBBE938971E1EA0C38BD9B5446    13273364\n",
+       "ECED8A16BE2A5E8871FD55F4842F16B1    10280788\n",
+       "B9175601E87101A984A50F8A62A1C374     7884887\n",
+       "                                      ...   \n",
+       "D18801336202297E6484F634CAC6592E         614\n",
+       "4690215948DBF6872B8ED1C2BC87B17E         590\n",
+       "B2235C8B73239FDC5780DD132419833A         363\n",
+       "2E18F6F53E3CF073911AF0A93BBE5373         138\n",
+       "515E873C86EE1577E75FA2387B7FA59E          14\n",
+       "Name: Language, Length: 66, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_language.Language.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_language.Language.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>tweet_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581258144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>B9175601E87101A984A50F8A62A1C374</td>\n",
+       "      <td>1581018910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581244866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581250124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1580958805</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Language  tweet_timestamp\n",
+       "0  22C448FF81263D4BAF2A176145EE9EAD       1581258144\n",
+       "1  B9175601E87101A984A50F8A62A1C374       1581018910\n",
+       "2  22C448FF81263D4BAF2A176145EE9EAD       1581244866\n",
+       "3  22C448FF81263D4BAF2A176145EE9EAD       1581250124\n",
+       "4  22C448FF81263D4BAF2A176145EE9EAD       1580958805"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_language.head()"
    ]
   },
   {
