--- a/TweetText.ipynb
+++ b/TweetText.ipynb
@@ -236,6 +236,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -337,6 +344,111 @@
    ],
    "source": [
     "train_set[['user_text']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_of_interest = [\"language\"]\n",
+    "train_set_language = pd.read_csv('s3://recsys-challenge-2020/train_set_language.csv', encoding=\"utf-8\",\n",
+    "                     usecols= [1])\n",
+    "val_set_language = pd.read_csv('s3://recsys-challenge-2020/val_set_language.csv', encoding=\"utf-8\",\n",
+    "                     usecols= [1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>06D61DCBBE938971E1EA0C38BD9B5446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>ECED8A16BE2A5E8871FD55F4842F16B1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Language\n",
+       "0  06D61DCBBE938971E1EA0C38BD9B5446\n",
+       "1  D3164C7FBCF2565DDF915B1B3AEFB1DC\n",
+       "2  D3164C7FBCF2565DDF915B1B3AEFB1DC\n",
+       "3  ECED8A16BE2A5E8871FD55F4842F16B1\n",
+       "4  D3164C7FBCF2565DDF915B1B3AEFB1DC"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set_language.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "133267714"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_set_language)"
    ]
   }
  ],
