--- a/user_reply_score.ipynb
+++ b/user_reply_score.ipynb
@@ -84,6 +84,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_average(row1, row2):\n",
+    "    if pd.isna(row1):\n",
+    "        return 0.5\n",
+    "    sum_tensors = torch.zeros([768], dtype=torch.float32)\n",
+    "    tweet_token_list = ast.literal_eval(row1)\n",
+    "    for token_list in tweet_token_list:\n",
+    "        list_of_tokens = list(map(int, token_list.split('\\t')))\n",
+    "        if len(list_of_tokens) > 512:\n",
+    "            pre_list = list_of_tokens[:511]\n",
+    "            post_list = list_of_tokens[511-len(list_of_tokens):]\n",
+    "            post_list.insert(0, 101)\n",
+    "            pre_token_list_embeddings = model(torch.tensor(pre_list).unsqueeze(0))[0][0][0]\n",
+    "            post_token_list_embeddings = model(torch.tensor(post_list).unsqueeze(0))[0][0][0]\n",
+    "            token_list_embeddings = pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
+    "        else:\n",
+    "            token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
+    "        sum_tensors = sum_tensors + token_list_embeddings\n",
+    "    avg = sum_tensors/len(row1)\n",
+    "    tweet_average_embedding = model(torch.tensor(list(map(int, row2.split('\\t')))).unsqueeze(0))[0][0][0]\n",
+    "    score = torch.dot(avg, tweet_average_embedding)\n",
+    "    return score.detach().numpy().item(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
