bert reply score

--- a/UserEmbeddings.ipynb
+++ b/UserEmbeddings.ipynb
@@ -801,7 +801,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_average(row1, row2):\n",
+    "def calculate_average(row1, row2, index):\n",
+    "    if index % 100000 == 0:\n",
+    "        print(index)\n",
     "    if pd.isna(row1):\n",
     "        return 0.5\n",
     "    sum_tensors = torch.zeros([768], dtype=torch.float32)\n",
@@ -869,7 +871,7 @@
    "outputs": [],
    "source": [
     "user_val_set_reply_score['reply_score'] = user_tokens_val_set.apply \\\n",
-    "(lambda z: calculate_average(z.text__tokens_y, z.text__tokens_x), axis = 1)"
+    "(lambda z: calculate_average(z.text__tokens_y, z.text__tokens_x, z.name), axis = 1)"
    ]
   },
   {
