--- a/SaveUserTokens.ipynb
+++ b/SaveUserTokens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "column_of_interest = [\"text_ tokens\", \"engaging_user_id\", \"reply_timestamp\"]\n",
-    "train_set = pd.read_csv('s3://recsys-challenge-2020/training.tsv', encoding=\"utf-8\",\n",
+    "train_set = pd.read_csv('s3://recsys-challenge-2020/training.tsv', encoding=\"utf-8\",  sep=\"\\x01\",\n",
     "                     usecols= [0, 14, 20])"
    ]
   },
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "column_of_interest = [\"engaging_user_id\"]\n",
-    "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\",\n",
+    "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\", sep=\"\\x01\",\n",
     "                     usecols= [14])"
    ]
   },
