--- a/ContentFiltering_BERT_Embedding-retweet.ipynb
+++ b/ContentFiltering_BERT_Embedding-retweet.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens_reply.csv')\n",
+    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens_retweet.csv')\n",
     "column_of_interest = [\"text_ tokens\", \"engaging_user_id\"]\n",
     "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\",\n",
     "                     usecols= [0, 14], names=column_of_interest, sep=\"\\x01\")\n",
@@ -65,11 +65,12 @@
    "outputs": [],
    "source": [
     "def calculate_average(row1, row2, index, time1):\n",
+    "    prior = 0.113\n",
     "    if index % 1000 == 0:\n",
     "        print(index)\n",
     "        print(time.time() - time1)\n",
     "    if pd.isna(row1):\n",
-    "        return 0.028\n",
+    "        return prior\n",
     "    sum_tensors = torch.zeros([768], dtype=torch.float32)\n",
     "    tweet_token_list = ast.literal_eval(row1)\n",
     "    for token_list in tweet_token_list:\n",
@@ -99,11 +100,11 @@
     "\n",
     "#     P(B) = P(B/A)*P(A) + P(B/~A)* P(~A)\n",
     "\n",
-    "    num = P_B_given_A * 0.028\n",
+    "    num = P_B_given_A * prior\n",
     "    \n",
     "    \n",
     "    unlikelihood = 1.0 - P_B_given_A # P(B/~A)\n",
-    "    anti_score = unlikelihood * 0.972\n",
+    "    anti_score = unlikelihood * 0.887\n",
     "    normalizing_factor = num + anti_score # P(B)\n",
     "\n",
     "    \n",
@@ -118,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_val_set_reply_score = pd.DataFrame()"
+    "user_val_set_retweet_score = pd.DataFrame()"
    ]
   },
   {
@@ -128,7 +129,7 @@
    "outputs": [],
    "source": [
     "time1 = time.time()\n",
-    "user_val_set_reply_score['reply_score'] = user_tokens_val_set.apply \\\n",
+    "user_val_set_retweet_score['retweet_score'] = user_tokens_val_set.apply \\\n",
     "(lambda z: calculate_average(z.text__tokens_y, z.text__tokens_x, z.name, time1), axis = 1)\n",
     "time2 = time.time()\n",
     "print(time2 - time1)"
@@ -140,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_val_set_reply_score.to_csv('s3://recsys-challenge-2020/user_reply_score.csv', index = False)"
+    "user_val_set_retweet_score.to_csv('s3://recsys-challenge-2020/user_retweet_score.csv', index = False)"
    ]
   }
  ],
