--- a/SaveUserTokens.ipynb
+++ b/SaveUserTokens.ipynb
@@ -71,6 +71,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retweet with comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_of_interest = [\"text_ tokens\", \"engaging_user_id\", \"retweet_with_comment_timestamp\"]\n",
+    "train_set = pd.read_csv('s3://recsys-challenge-2020/training.tsv', encoding=\"utf-8\",  sep=\"\\x01\",\n",
+    "                     usecols= [0, 14, 22], names = column_of_interest)\n",
+    "column_of_interest = [\"engaging_user_id\"]\n",
+    "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\", sep=\"\\x01\",\n",
+    "                     usecols= [14], names=column_of_interest)\n",
+    "unique_val_set_users = val_set[['engaging_user_id']].drop_duplicates()\n",
+    "train_set_positive = train_set[train_set.retweet_with_comment_timestamp.notnull()]\n",
+    "warm_train_set_positive = pd.merge(train_set_positive, unique_val_set_users, how = 'inner', on = 'engaging_user_id')\n",
+    "user_tokens = warm_train_set_positive.groupby(['engaging_user_id'])['text_ tokens'].agg(list).reset_index()\n",
+    "user_tokens.to_csv('s3://recsys-challenge-2020/user_tokens_retweet_with_comment.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_of_interest = [\"text_ tokens\", \"engaging_user_id\", \"like_timestamp\"]\n",
+    "train_set = pd.read_csv('s3://recsys-challenge-2020/training.tsv', encoding=\"utf-8\",  sep=\"\\x01\",\n",
+    "                     usecols= [0, 14, 23], names = column_of_interest)\n",
+    "column_of_interest = [\"engaging_user_id\"]\n",
+    "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\", sep=\"\\x01\",\n",
+    "                     usecols= [14], names=column_of_interest)\n",
+    "unique_val_set_users = val_set[['engaging_user_id']].drop_duplicates()\n",
+    "train_set_positive = train_set[train_set.like_timestamp.notnull()]\n",
+    "warm_train_set_positive = pd.merge(train_set_positive, unique_val_set_users, how = 'inner', on = 'engaging_user_id')\n",
+    "user_tokens = warm_train_set_positive.groupby(['engaging_user_id'])['text_ tokens'].agg(list).reset_index()\n",
+    "user_tokens.to_csv('s3://recsys-challenge-2020/user_tokens_like.csv', index = False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
