handle lengths greater than 512

--- a/ContentFiltering_BERT_Embedding-like.ipynb
+++ b/ContentFiltering_BERT_Embedding-like.ipynb
@@ -76,20 +76,19 @@
     "    for token_list in tweet_token_list:\n",
     "        list_of_tokens = list(map(int, token_list.split('\\t')))\n",
     "        if len(list_of_tokens) > 512:\n",
-    "            pre_list = list_of_tokens[:511]\n",
-    "            post_list = list_of_tokens[511-len(list_of_tokens):]\n",
-    "            post_list.insert(0, 101)\n",
-    "            pre_token_list_embeddings = model(torch.tensor(pre_list).unsqueeze(0))[0][0][0]\n",
-    "            post_token_list_embeddings = model(torch.tensor(post_list).unsqueeze(0))[0][0][0]\n",
-    "            token_list_embeddings = (pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
-    "        else:\n",
-    "            token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
+    "            list_of_tokens = list_of_tokens[:511]\n",
+    "\n",
+    "        token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
     "        sum_tensors = sum_tensors + token_list_embeddings\n",
     "        \n",
     "    avg = sum_tensors/len(row1)\n",
     "    p_user_avg_embedding = avg / torch.norm(avg)\n",
     "    \n",
-    "    tweet_embedding = model(torch.tensor(list(map(int, row2.split('\\t')))).unsqueeze(0))[0][0][0]\n",
+    "    tweet_list_of_tokens = list(map(int, row2.split('\\t')))\n",
+    "    if len(tweet_list_of_tokens) > 512:\n",
+    "        tweet_list_of_tokens = tweet_list_of_tokens[:511]\n",
+    "    tweet_embedding = model(torch.tensor(tweet_list_of_tokens).unsqueeze(0))[0][0][0]\n",
+    "    \n",
     "    tweet_average_embedding = tweet_embedding / torch.norm(tweet_embedding)\n",
     "    \n",
     "    P_B_given_A = torch.dot(p_user_avg_embedding, tweet_average_embedding)\n",
