--- a/ContentFiltering_BERT_Embedding-like-gpu.ipynb
+++ b/ContentFiltering_BERT_Embedding-like-gpu.ipynb
@@ -23,47 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2.0500)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = torch.tensor(2.05)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-1.0500)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1.0 - a"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -78,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens_like.csv')\n",
+    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens_reply.csv')\n",
     "column_of_interest = [\"text_ tokens\", \"engaging_user_id\"]\n",
     "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\",\n",
     "                     usecols= [0, 14], names=column_of_interest, sep=\"\\x01\")\n",
@@ -119,42 +78,23 @@
     "    for token_list in tweet_token_list:\n",
     "        list_of_tokens = list(map(int, token_list.split('\\t')))\n",
     "        if len(list_of_tokens) > 512:\n",
-    "            pre_list = list_of_tokens[:511]\n",
-    "            post_list = list_of_tokens[511-len(list_of_tokens):]\n",
-    "            post_list.insert(0, 101)\n",
+    "            list_of_tokens = list_of_tokens[:511]\n",
+    "        tensor_tokens = torch.tensor(list_of_tokens).cuda()\n",
+    "        tensor_tokens_unsqueeze = tensor_tokens.unsqueeze(0).cuda()\n",
+    "        model_tokens  = model(tensor_tokens_unsqueeze)\n",
     "\n",
-    "            tensor_tokens = torch.tensor(pre_list).cuda()\n",
-    "            tensor_tokens_unsqueeze = tensor_tokens.unsqueeze(0).cuda()\n",
-    "            model_tokens  = model(tensor_tokens_unsqueeze)\n",
-    "\n",
-    "            model_tokens_1d = model_tokens[0].cuda()\n",
-    "            model_tokens_2d = model_tokens_1d[0].cuda()\n",
-    "            pre_token_list_embeddings =  model_tokens_2d[0].cuda()\n",
-    "            \n",
-    "            \n",
-    "            tensor_tokens = torch.tensor(post_list).cuda()\n",
-    "            tensor_tokens_unsqueeze = tensor_tokens.unsqueeze(0).cuda()\n",
-    "            model_tokens  = model(tensor_tokens_unsqueeze)\n",
-    "\n",
-    "            model_tokens_1d = model_tokens[0].cuda()\n",
-    "            model_tokens_2d = model_tokens_1d[0].cuda()\n",
-    "            post_token_list_embeddings =  model_tokens_2d[0].cuda()\n",
-    "            \n",
-    "            token_list_embeddings = (pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
-    "        else:\n",
-    "            tensor_tokens = torch.tensor(list_of_tokens).cuda()\n",
-    "            tensor_tokens_unsqueeze = tensor_tokens.unsqueeze(0).cuda()\n",
-    "            model_tokens  = model(tensor_tokens_unsqueeze)\n",
-    "\n",
-    "            model_tokens_1d = model_tokens[0].cuda()\n",
-    "            model_tokens_2d = model_tokens_1d[0].cuda()\n",
-    "            token_list_embeddings =  model_tokens_2d[0].cuda()\n",
+    "        model_tokens_1d = model_tokens[0].cuda()\n",
+    "        model_tokens_2d = model_tokens_1d[0].cuda()\n",
+    "        token_list_embeddings =  model_tokens_2d[0].cuda()\n",
     "        sum_tensors = (sum_tensors + token_list_embeddings).cuda()\n",
     "        \n",
     "    avg = (sum_tensors/len_row1).cuda()\n",
     "    p_user_avg_embedding = (avg / torch.norm(avg).cuda()).cuda()\n",
     "    \n",
     "    list_of_tokens_val = list(map(int, row2.split('\\t')))\n",
+    "    if len(list_of_tokens_val > 512):\n",
+    "        list_of_tokens_val = list_of_tokens_val[:511]\n",
+    "    \n",
     "    tensor_tokens_val = torch.tensor(list_of_tokens_val).cuda()\n",
     "    tensor_tokens_unsqueeze_val = tensor_tokens_val.unsqueeze(0).cuda()\n",
     "    model_tokens_val = model(tensor_tokens_unsqueeze_val)\n",
