--- a/ContentFiltering_BERT_Embedding_Validation_Reply.ipynb
+++ b/ContentFiltering_BERT_Embedding_Validation_Reply.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,14 +514,14 @@
     "    for token_list in tweet_token_list:\n",
     "        list_of_tokens = list(map(int, token_list.split('\\t')))\n",
     "        if len(list_of_tokens) > 512:\n",
-    "            pre_list = list_of_tokens[:511]\n",
-    "            post_list = list_of_tokens[511-len(list_of_tokens):]\n",
-    "            post_list.insert(0, 101)\n",
-    "            pre_token_list_embeddings = model(torch.tensor(pre_list).unsqueeze(0))[0][0][0]\n",
-    "            post_token_list_embeddings = model(torch.tensor(post_list).unsqueeze(0))[0][0][0]\n",
-    "            token_list_embeddings = (pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
-    "        else:\n",
-    "            token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
+    "            list_of_tokens = list_of_tokens[:511]\n",
+    "#             post_list = list_of_tokens[511-len(list_of_tokens):]\n",
+    "#             post_list.insert(0, 101)\n",
+    "#             pre_token_list_embeddings = model(torch.tensor(pre_list).unsqueeze(0))[0][0][0]\n",
+    "#             post_token_list_embeddings = model(torch.tensor(post_list).unsqueeze(0))[0][0][0]\n",
+    "#             token_list_embeddings = (pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
+    "#         else:\n",
+    "        token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
     "        sum_tensors = sum_tensors + token_list_embeddings\n",
     "    avg = sum_tensors/len(row1)\n",
     "    tweet_average_embedding = model(torch.tensor(list(map(int, row2.split('\\t')))).unsqueeze(0))[0][0][0]\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,14 +564,14 @@
     "    for token_list in tweet_token_list:\n",
     "        list_of_tokens = list(map(int, token_list.split('\\t')))\n",
     "        if len(list_of_tokens) > 512:\n",
-    "            pre_list = list_of_tokens[:511]\n",
-    "            post_list = list_of_tokens[511-len(list_of_tokens):]\n",
-    "            post_list.insert(0, 101)\n",
-    "            pre_token_list_embeddings = model(torch.tensor(pre_list).unsqueeze(0))[0][0][0]\n",
-    "            post_token_list_embeddings = model(torch.tensor(post_list).unsqueeze(0))[0][0][0]\n",
-    "            token_list_embeddings = (pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
-    "        else:\n",
-    "            token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
+    "            list_of_tokens = list_of_tokens[:511]\n",
+    "#             post_list = list_of_tokens[511-len(list_of_tokens):]\n",
+    "#             post_list.insert(0, 101)\n",
+    "#             pre_token_list_embeddings = model(torch.tensor(pre_list).unsqueeze(0))[0][0][0]\n",
+    "#             post_token_list_embeddings = model(torch.tensor(post_list).unsqueeze(0))[0][0][0]\n",
+    "#             token_list_embeddings = (pre_token_list_embeddings + post_token_list_embeddings)/2.0\n",
+    "#         else:\n",
+    "        token_list_embeddings = model(torch.tensor(list_of_tokens).unsqueeze(0))[0][0][0]\n",
     "        sum_tensors = sum_tensors + token_list_embeddings\n",
     "        \n",
     "    avg = sum_tensors/len(row1)\n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
       "num: tensor(0.0249, grad_fn=<MulBackward0>)\n",
       "den: tensor(0.1325, grad_fn=<AddBackward0>)\n",
       "posterior: tensor(0.1880, grad_fn=<DivBackward0>)\n",
-      "14.080105543136597\n"
+      "15.064778804779053\n"
      ]
     }
    ],
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "1000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
        "1000"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
        "0.10066636518081096"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
        "4.09965892518983"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
