--- a/ContentFiltering_BERT_Embedding-retweet-gpu.ipynb
+++ b/ContentFiltering_BERT_Embedding-retweet-gpu.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens_like.csv')\n",
+    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens_retweet.csv')\n",
     "column_of_interest = [\"text_ tokens\", \"engaging_user_id\"]\n",
     "val_set = pd.read_csv('s3://recsys-challenge-2020/val.tsv', encoding=\"utf-8\",\n",
     "                     usecols= [0, 14], names=column_of_interest, sep=\"\\x01\")\n",
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "def calculate_average(row1, row2, index, time1):\n",
-    "    prior = 0.439\n",
+    "    prior = 0.113\n",
     "    if index % 1000 == 0:\n",
     "        print(index)\n",
     "        print(time.time() - time1)\n",
@@ -113,7 +113,7 @@
     "    \n",
     "    \n",
     "    unlikelihood = (1.0 - P_B_given_A).cuda() # P(B/~A)\n",
-    "    anti_score = (unlikelihood * 0.561).cuda()\n",
+    "    anti_score = (unlikelihood * 0.887).cuda()\n",
     "    normalizing_factor = (num + anti_score).cuda() # P(B)\n",
     "\n",
     "    \n",
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "time1 = time.time()\n",
-    "user_val_set_like_score['like_score'] = user_tokens_val_set.apply \\\n",
+    "user_val_set_retweet_score['retweet_score'] = user_tokens_val_set.apply \\\n",
     "(lambda z: calculate_average(z.text__tokens_y, z.text__tokens_x, z.name, time1), axis = 1)\n",
     "time2 = time.time()\n",
     "print(time2 - time1)"
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_val_set_like_score.to_csv('s3://recsys-challenge-2020/user_like_score.csv', index = False)"
+    "user_val_set_retweet_score.to_csv('s3://recsys-challenge-2020/user_retweet_score.csv', index = False)"
    ]
   }
  ],
