--- a/ContentFiltering_BERT_Embedding-retweet-gpu.ipynb
+++ b/ContentFiltering_BERT_Embedding-retweet-gpu.ipynb
@@ -61,6 +61,7 @@
    "outputs": [],
    "source": [
     "def calculate_average(row1, row2, index, time1):\n",
+    "    torch.cuda.empty_cache()\n",
     "    prior = 0.113\n",
     "    if index % 1000 == 0:\n",
     "        print(index)\n",
