--- a/ContentFiltering_BERT_Embedding-like-gpu.ipynb
+++ b/ContentFiltering_BERT_Embedding-like-gpu.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = BertModel.from_pretrained('bert-base-multilingual-cased').cuda()\n",
+    "model = BertModel.from_pretrained('bert-base-multilingual-cased').cuda(1)\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)"
    ]
   },
@@ -61,65 +61,67 @@
    "outputs": [],
    "source": [
     "def calculate_average(row1, row2, index, time1):\n",
-    "    prior = 0.439\n",
-    "    if index % 1000 == 0:\n",
-    "        print(index)\n",
-    "        print(time.time() - time1)\n",
-    "    if pd.isna(row1):\n",
-    "        return prior\n",
-    "    \n",
-    "    sum_tensors = torch.zeros([768], dtype=torch.float32).cuda()\n",
-    "    tweet_token_list = ast.literal_eval(row1)\n",
-    "    len_row1 = len(row1)\n",
-    "    \n",
-    "    for token_list in tweet_token_list:\n",
-    "        list_of_tokens = list(map(int, token_list.split('\\t')))\n",
-    "        if len(list_of_tokens) > 512:\n",
-    "            list_of_tokens = list_of_tokens[:511]\n",
-    "        tensor_tokens = torch.tensor(list_of_tokens).cuda()\n",
-    "        tensor_tokens_unsqueeze = tensor_tokens.unsqueeze(0).cuda()\n",
-    "        model_tokens  = model(tensor_tokens_unsqueeze)\n",
+    "    with torch.cuda.device(1):\n",
+    "        torch.cuda.empty_cache()\n",
+    "        prior = 0.439\n",
+    "        if index % 1000 == 0:\n",
+    "            print(index)\n",
+    "            print(time.time() - time1)\n",
+    "        if pd.isna(row1):\n",
+    "            return prior\n",
     "\n",
-    "        model_tokens_1d = model_tokens[0].cuda()\n",
-    "        model_tokens_2d = model_tokens_1d[0].cuda()\n",
-    "        token_list_embeddings =  model_tokens_2d[0].cuda()\n",
-    "        sum_tensors = (sum_tensors + token_list_embeddings).cuda()\n",
-    "        \n",
-    "    avg = (sum_tensors/len_row1).cuda()\n",
-    "    p_user_avg_embedding = (avg / torch.norm(avg).cuda()).cuda()\n",
-    "    \n",
-    "    list_of_tokens_val = list(map(int, row2.split('\\t')))\n",
-    "    if len(list_of_tokens_val) > 512:\n",
-    "        list_of_tokens_val = list_of_tokens_val[:511]\n",
-    "    \n",
-    "    tensor_tokens_val = torch.tensor(list_of_tokens_val).cuda()\n",
-    "    tensor_tokens_unsqueeze_val = tensor_tokens_val.unsqueeze(0).cuda()\n",
-    "    model_tokens_val = model(tensor_tokens_unsqueeze_val)\n",
-    "    model_tokens_1d_val = model_tokens_val[0].cuda()\n",
-    "    model_tokens_2d_val = model_tokens_1d_val[0].cuda()\n",
-    "    tweet_embedding = model_tokens_2d_val[0].cuda()\n",
-    "    \n",
-    "    tweet_average_embedding = (tweet_embedding / torch.norm(tweet_embedding).cuda()).cuda()\n",
-    "    \n",
-    "    P_B_given_A = torch.dot(p_user_avg_embedding, tweet_average_embedding).cuda()\n",
-    "    \n",
-    "#     posterior = (likelihood*prior)  /  ((likelihood*prior) + ((1-likelihood)*(1-prior)))\n",
-    "    \n",
-    "#     P(A|B) = P(B|A) * P(A) / P(B)\n",
+    "        sum_tensors = torch.zeros([768], dtype=torch.float32).cuda()\n",
+    "        tweet_token_list = ast.literal_eval(row1)\n",
+    "        len_row1 = len(row1)\n",
     "\n",
-    "#     P(B) = P(B/A)*P(A) + P(B/~A)* P(~A)\n",
+    "        for token_list in tweet_token_list:\n",
+    "            list_of_tokens = list(map(int, token_list.split('\\t')))\n",
+    "            if len(list_of_tokens) > 512:\n",
+    "                list_of_tokens = list_of_tokens[:511]\n",
+    "            tensor_tokens = torch.tensor(list_of_tokens).cuda()\n",
+    "            tensor_tokens_unsqueeze = tensor_tokens.unsqueeze(0).cuda()\n",
+    "            model_tokens  = model(tensor_tokens_unsqueeze)\n",
     "\n",
-    "    num = (P_B_given_A * prior).cuda()\n",
-    "    \n",
-    "    \n",
-    "    unlikelihood = (1.0 - P_B_given_A).cuda() # P(B/~A)\n",
-    "    anti_score = (unlikelihood * 0.561).cuda()\n",
-    "    normalizing_factor = (num + anti_score).cuda() # P(B)\n",
+    "            model_tokens_1d = model_tokens[0].cuda()\n",
+    "            model_tokens_2d = model_tokens_1d[0].cuda()\n",
+    "            token_list_embeddings =  model_tokens_2d[0].cuda()\n",
+    "            sum_tensors = (sum_tensors + token_list_embeddings).cuda()\n",
     "\n",
-    "    \n",
-    "    posterior = (num / normalizing_factor).cuda()\n",
-    "    \n",
-    "    return posterior.cpu().detach().numpy().item(0)"
+    "        avg = (sum_tensors/len_row1).cuda()\n",
+    "        p_user_avg_embedding = (avg / torch.norm(avg).cuda()).cuda()\n",
+    "\n",
+    "        list_of_tokens_val = list(map(int, row2.split('\\t')))\n",
+    "        if len(list_of_tokens_val) > 512:\n",
+    "            list_of_tokens_val = list_of_tokens_val[:511]\n",
+    "\n",
+    "        tensor_tokens_val = torch.tensor(list_of_tokens_val).cuda()\n",
+    "        tensor_tokens_unsqueeze_val = tensor_tokens_val.unsqueeze(0).cuda()\n",
+    "        model_tokens_val = model(tensor_tokens_unsqueeze_val)\n",
+    "        model_tokens_1d_val = model_tokens_val[0].cuda()\n",
+    "        model_tokens_2d_val = model_tokens_1d_val[0].cuda()\n",
+    "        tweet_embedding = model_tokens_2d_val[0].cuda()\n",
+    "\n",
+    "        tweet_average_embedding = (tweet_embedding / torch.norm(tweet_embedding).cuda()).cuda()\n",
+    "\n",
+    "        P_B_given_A = torch.dot(p_user_avg_embedding, tweet_average_embedding).cuda()\n",
+    "\n",
+    "    #     posterior = (likelihood*prior)  /  ((likelihood*prior) + ((1-likelihood)*(1-prior)))\n",
+    "\n",
+    "    #     P(A|B) = P(B|A) * P(A) / P(B)\n",
+    "\n",
+    "    #     P(B) = P(B/A)*P(A) + P(B/~A)* P(~A)\n",
+    "\n",
+    "        num = (P_B_given_A * prior).cuda()\n",
+    "\n",
+    "\n",
+    "        unlikelihood = (1.0 - P_B_given_A).cuda() # P(B/~A)\n",
+    "        anti_score = (unlikelihood * 0.561).cuda()\n",
+    "        normalizing_factor = (num + anti_score).cuda() # P(B)\n",
+    "\n",
+    "\n",
+    "        posterior = (num / normalizing_factor).cuda()\n",
+    "\n",
+    "        return posterior.cpu().detach().numpy().item(0)"
    ]
   },
   {
