--- a/TextandLanguage.ipynb
+++ b/TextandLanguage.ipynb
@@ -668,8 +668,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Work with test data now to get the clean text of test data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,6 +684,311 @@
     "\n",
     "test = pd.read_csv(\"s3://recsys-challenge-2020/val.tsv\", encoding=\"utf-8\",\n",
     "                    names = all_features, usecols= [0], sep=\"\\x01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_text = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_text(row):\n",
+    "    tweet_tokens = tokenizer.decode(list(map(int, row.split('\\t'))))\n",
+    "    return tweet_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_text['user_text'] = test['text_ tokens'].apply(lambda x: calculate_text(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_text.to_csv('s3://recsys-challenge-2020/test_set_text.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_text_test = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "1500000\n",
+      "1600000\n",
+      "1700000\n",
+      "1800000\n",
+      "1900000\n",
+      "2000000\n",
+      "2100000\n",
+      "2200000\n",
+      "2300000\n",
+      "2400000\n",
+      "2500000\n",
+      "2600000\n",
+      "2700000\n",
+      "2800000\n",
+      "2900000\n",
+      "3000000\n",
+      "3100000\n",
+      "3200000\n",
+      "3300000\n",
+      "3400000\n",
+      "3500000\n",
+      "3600000\n",
+      "3700000\n",
+      "3800000\n",
+      "3900000\n",
+      "4000000\n",
+      "4100000\n",
+      "4200000\n",
+      "4300000\n",
+      "4400000\n",
+      "4500000\n",
+      "4600000\n",
+      "4700000\n",
+      "4800000\n",
+      "4900000\n",
+      "5000000\n",
+      "5100000\n",
+      "5200000\n",
+      "5300000\n",
+      "5400000\n",
+      "5500000\n",
+      "5600000\n",
+      "5700000\n",
+      "5800000\n",
+      "5900000\n",
+      "6000000\n",
+      "6100000\n",
+      "6200000\n",
+      "6300000\n",
+      "6400000\n",
+      "6500000\n",
+      "6600000\n",
+      "6700000\n",
+      "6800000\n",
+      "6900000\n",
+      "7000000\n",
+      "7100000\n",
+      "7200000\n",
+      "7300000\n",
+      "7400000\n",
+      "7500000\n",
+      "7600000\n",
+      "7700000\n",
+      "7800000\n",
+      "7900000\n",
+      "8000000\n",
+      "8100000\n",
+      "8200000\n",
+      "8300000\n",
+      "8400000\n",
+      "8500000\n",
+      "8600000\n",
+      "8700000\n",
+      "8800000\n",
+      "8900000\n",
+      "9000000\n",
+      "9100000\n",
+      "9200000\n",
+      "9300000\n",
+      "9400000\n",
+      "9500000\n",
+      "9600000\n",
+      "9700000\n",
+      "9800000\n",
+      "9900000\n",
+      "10000000\n",
+      "10100000\n",
+      "10200000\n",
+      "10300000\n",
+      "10400000\n",
+      "10500000\n",
+      "10600000\n",
+      "10700000\n",
+      "10800000\n",
+      "10900000\n",
+      "11000000\n",
+      "11100000\n",
+      "11200000\n",
+      "11300000\n",
+      "11400000\n",
+      "11500000\n",
+      "11600000\n",
+      "11700000\n",
+      "11800000\n",
+      "11900000\n",
+      "12000000\n",
+      "12100000\n",
+      "12200000\n",
+      "12300000\n",
+      "12400000\n",
+      "12500000\n",
+      "12600000\n",
+      "12700000\n",
+      "12800000\n",
+      "12900000\n",
+      "13000000\n",
+      "13100000\n",
+      "13200000\n",
+      "13300000\n",
+      "13400000\n",
+      "13500000\n",
+      "13600000\n",
+      "13700000\n",
+      "13800000\n",
+      "13900000\n",
+      "14000000\n",
+      "14100000\n",
+      "14200000\n",
+      "14300000\n",
+      "14400000\n",
+      "14500000\n",
+      "14600000\n",
+      "14700000\n",
+      "14800000\n",
+      "14900000\n",
+      "15000000\n",
+      "15100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaned_text_test['tweet_text'] = test_text.apply(lambda x: tokenize_text(x.user_text, x.name), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_text_test.to_csv('s3://recsys-challenge-2020/cleaned_text_test.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>funky techno witch t co ydfhit7ncn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>空 港 で 財 布 置 き 忘 れたら 偶 然 隣 座 ってた 方 がフォロワーさんで 渡 しにきてくれた 本 当 にありがとう 堂 々と 横 で 仕 事 しててよかった t co pvwxertu0p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>rt legadodekonoha eis o verdadeiro significado de sonho de consumo para um fã de naruto t co w5boqyhfpo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>para uma criança pequenina que verá um pouco mais do mundo a partir de hoje e para outra não tão pequenina que já aprendeu um pouquinho a ver o mundo com os próprios olhos t co x5k7a1dc65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>why lesbian couples are more likely to divorce than gay ones t co ccsxngoeyl</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                    tweet_text\n",
+       "0  funky techno witch t co ydfhit7ncn                                                                                                                                                         \n",
+       "1  空 港 で 財 布 置 き 忘 れたら 偶 然 隣 座 ってた 方 がフォロワーさんで 渡 しにきてくれた 本 当 にありがとう 堂 々と 横 で 仕 事 しててよかった t co pvwxertu0p                                                                                      \n",
+       "2  rt legadodekonoha eis o verdadeiro significado de sonho de consumo para um fã de naruto t co w5boqyhfpo                                                                                    \n",
+       "3  para uma criança pequenina que verá um pouco mais do mundo a partir de hoje e para outra não tão pequenina que já aprendeu um pouquinho a ver o mundo com os próprios olhos t co x5k7a1dc65\n",
+       "4  why lesbian couples are more likely to divorce than gay ones t co ccsxngoeyl                                                                                                               "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_text_test.head()"
    ]
   },
   {
